--- a/_config.yml
+++ b/_config.yml
@@ -9,21 +9,21 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Europe/Rome
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Welcome folks, I'm Vincent # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: that's my personal blog where i'll post thing i find intresting # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://u-n-own.github.io/"
 
 github:
   username: U-n-Own # change to your github username
@@ -70,10 +70,10 @@ theme_mode: [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn:
+img_cdn: 
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/imgs/replication.jpeg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
