--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Welcome folks, I'm Vincent # the main title
 tagline: that's my personal blog where i'll post thing i find intresting # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A very simple website hosted by GitHub Pages and powered by Jekyll, to share my thoughts and ideas.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -63,7 +63,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: [dark]
+theme_mode: # [dark|light]
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
